// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Tunes Player - Render Tests should render new player by default 1`] = `
<div>
  <div
    class="sc-hHLeRK jqhWPP"
  >
    <div
      class="sc-bjUoiL gvnUrq"
    >
      <svg
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M32 464h448L256 48 32 464zm248-64h-48v-48h48v48zm0-80h-48v-96h48v96z"
        />
      </svg>
      <span
        class="sc-dIouRR evIpjP"
      >
        Warning! No tunes loaded in player.
      </span>
    </div>
  </div>
</div>
`;

exports[`React Tunes Player - Render Tests should render old player by setting oldPlayer prop 1`] = `
<div>
  <div
    class="sc-bczRLJ gDWqKd"
  >
    <div
      class="sc-gsnTZi ljuRqf"
    >
      <div
        class="sc-bjUoiL gvnUrq"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M32 464h448L256 48 32 464zm248-64h-48v-48h48v48zm0-80h-48v-96h48v96z"
          />
        </svg>
        <span
          class="sc-dIouRR evIpjP"
        >
          Warning! No tunes loaded in player.
        </span>
      </div>
    </div>
  </div>
</div>
`;
